--- a/src/main/webapp/WEB-INF/views/people/list.html
+++ b/src/main/webapp/WEB-INF/views/people/list.html
@@ -10,7 +10,7 @@
        th:text="${person.getFullName()}"></a>
 </div>
 <hr>
-<form method="get" th:action="@{/people/add_person}">
+<form method="get" th:action="@{/people/new}">
     <input type="submit" value="Добавить человека">
 </form>
 <form method="get" th:action="@{/books}">
